--- a/main.html
+++ b/main.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>OTP Verification</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+<div class="container">
+
+  <h2 id="verification_heading">Verify Your Account</h2>
+
+  <p id="verification_subtext">
+    We emailed you the six digit code. Enter it below to confirm your email address.
+  </p>
+
+  <div class="code-container">
+
+    <input type="text" maxlength="1" class="code" />
+    <input type="text" maxlength="1" class="code" />
+    <input type="text" maxlength="1" class="code" />
+    <input type="text" maxlength="1" class="code" />
+    <input type="text" maxlength="1" class="code" />
+    <input type="text" maxlength="1" class="code" />
+
+  </div>
+
+</div>
+
+<script src="script.js"></script>
 </body>
-
 </html>
+
